--- a/MetaExchange/MetaExchange.Infrastructure/MetaExchange.Infrastructure.csproj
+++ b/MetaExchange/MetaExchange.Infrastructure/MetaExchange.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MetaExchange.Application\MetaExchange.Application.csproj" />
+  </ItemGroup>
+
 </Project>
