feat(be): Added Balance provider, and trim timestamp in each line before json object.

--- a/MetaExchange/MetaExchange.ConsoleApp/appsettings.json
+++ b/MetaExchange/MetaExchange.ConsoleApp/appsettings.json
@@ -1,5 +1,6 @@
 {
   "AppConfig": {
-    "OrderBookPath": "MetaExchange//Data"
+    "OrderBookPath": "../../../../../MetaExchange/Data/order_book_test",
+    "BalancePath": "../../../../../MetaExchange/Data/balances.json"
   }
 }
