--- a/MetaExchange/MetaExchange.Infrastructure/MetaExchange.Infrastructure.csproj
+++ b/MetaExchange/MetaExchange.Infrastructure/MetaExchange.Infrastructure.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\MetaExchange.Application\MetaExchange.Application.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>MetaExchange.Infrastructure.Tests</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
+
 </Project>
