--- a/MetaExchange/MetaExchange.ConsoleApp/appsettings.json
+++ b/MetaExchange/MetaExchange.ConsoleApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppConfig": {
-    "OrderBookPath": "../../../../../MetaExchange/Data/order_book_test",
-    "BalancePath": "../../../../../MetaExchange/Data/balances.json"
+    "OrderBookPath": "Data/order_book_test",
+    "BalancePath": "Data/balances.json"
   }
 }
