--- a/MetaExchange/MetaExchange.ConsoleApp/Properties/launchSettings.json
+++ b/MetaExchange/MetaExchange.ConsoleApp/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "MetaExchange.ConsoleApp": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "workingDirectory": "../../"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker"
